Updated .py Files to Current
Separated functions in yelp.py into files
Renamed yelp.py to yelpExecute.py
.ipynb file not most recent due to long processing time

--- a/Analysis/Yelp.ipynb
+++ b/Analysis/Yelp.ipynb
@@ -6,46 +6,105 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Dylan\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVM\n",
-      "Accuracy (R2): 0.27\n",
-      "MAE: 0.24\n",
-      "MSE: 0.11\n",
-      "RMSE: 0.33\n",
       "\n",
-      "Normalized Linear Regression\n",
-      "Accuracy (R2): 0.34\n",
-      "MAE: 0.20\n",
-      "MSE: 0.10\n",
-      "RMSE: 0.31\n",
+      "Multinomial Logistic Regression\n",
+      "Measures:\n",
+      "             precision    recall  f1-score   support\n",
       "\n",
-      "Decision Tree Regression\n",
-      "Accuracy (R2): 0.50\n",
-      "MAE: 0.13\n",
-      "MSE: 0.07\n",
-      "RMSE: 0.27\n",
+      "          1       0.00      0.00      0.00        19\n",
+      "          2       0.56      0.22      0.31       171\n",
+      "          3       0.71      0.76      0.73       902\n",
+      "          4       0.54      0.65      0.59       617\n",
+      "          5       0.60      0.40      0.48       258\n",
       "\n",
-      "Bayesian Ridge Regression\n",
-      "Accuracy (R2): 0.57\n",
-      "MAE: 0.16\n",
-      "MSE: 0.06\n",
-      "RMSE: 0.25\n",
+      "avg / total       0.62      0.63      0.61      1967\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Dylan\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1135: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC for class  1  0.98\n",
+      "AUC for class  2  0.87\n",
+      "AUC for class  3  0.86\n",
+      "AUC for class  4  0.80\n",
+      "AUC for class  5  0.95\n",
+      "\n",
+      "Random Forest Regression\n",
+      "Measures:\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          1       0.85      0.58      0.69        19\n",
+      "          2       0.92      0.70      0.80       171\n",
+      "          3       0.83      0.90      0.87       902\n",
+      "          4       0.76      0.79      0.77       617\n",
+      "          5       0.84      0.65      0.73       258\n",
+      "\n",
+      "avg / total       0.82      0.81      0.81      1967\n",
+      "\n",
+      "AUC for class  1  0.74\n",
+      "AUC for class  2  0.78\n",
+      "AUC for class  3  0.89\n",
+      "AUC for class  4  0.80\n",
+      "AUC for class  5  0.76\n",
+      "\n",
+      "SVM\n",
+      "Measures:\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          1       0.00      0.00      0.00        19\n",
+      "          2       0.00      0.00      0.00       171\n",
+      "          3       0.46      1.00      0.63       902\n",
+      "          4       0.00      0.00      0.00       617\n",
+      "          5       0.00      0.00      0.00       258\n",
+      "\n",
+      "avg / total       0.21      0.46      0.29      1967\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Dylan\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1135: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC for class  1  0.98\n",
+      "AUC for class  2  0.92\n",
+      "AUC for class  3  0.82\n",
+      "AUC for class  4  0.84\n",
+      "AUC for class  5  0.97\n"
      ]
     }
    ],
    "source": [
     "%run yelpRun.py"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
