--- a/Analysis/Results/Yelp Model Final Results.ipynb
+++ b/Analysis/Results/Yelp Model Final Results.ipynb
@@ -29,21 +29,7 @@
       "          5       0.60      0.40      0.48       258\n",
       "\n",
       "avg / total       0.62      0.63      0.61      1967\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Dylan\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1135: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "AUC for class  1  0.98\n",
       "AUC for class  2  0.87\n",
       "AUC for class  3  0.86\n",
@@ -79,21 +65,7 @@
       "          5       0.00      0.00      0.00       258\n",
       "\n",
       "avg / total       0.21      0.46      0.29      1967\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Dylan\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1135: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "AUC for class  1  0.98\n",
       "AUC for class  2  0.92\n",
       "AUC for class  3  0.82\n",
@@ -103,6 +75,8 @@
     }
    ],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "%run yelpRun.py"
    ]
   }
